--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -56,7 +56,7 @@ Materials for this class are available on GitHub at
 
 --
 
-* You ca use the `git` command line client with
+* You can use the `git` command line client with
     ```shell
 git clone https://github.com/ltierney/SIBS-WV-2021.git
     ```
@@ -307,13 +307,13 @@ Making your work reproducible:
 
 --
 
-* Using a system like [Rmarkdown](https://rmarkdown.rstudio.com) to
+* Use a system like [Rmarkdown](https://rmarkdown.rstudio.com) to
   prepare your reports.
 
 --
 
 This allows you to re-create your report when data changes (as it
-often will!)
+often will!).
 
 --
 
@@ -329,8 +329,8 @@ class: center, middle
 ---
 ## Some Examples
 
-Working with research data a first step is usually to read and clean
-the data.
+When working with research data, a first step is usually to read and
+clean the data.
 
 --
 
@@ -385,7 +385,7 @@ Faithful_ geyser in Yellowstone National Park, Wyoming.
 
 The variables are:
 
-* `waiting`: the time in minutes since the precious eruption;
+* `waiting`: the time in minutes since the previous eruption;
 
 --
 
@@ -449,7 +449,7 @@ ggplot(geyser) +
 --
 .pull-right-foo[
 It looks like a useful rule would be to expect a shorter waiting time
-after a shorter eruption.
+after a shorter eruption duration.
 ]
 
 ---
@@ -463,7 +463,7 @@ Many durations are recorded as 2 or 4 minutes.
 
 --
 
-This can also be seen in a histogram with many small bins:
+This can also be seen in a histogram with a small bin width:
 
 .pull-left[
 ```{r geyser-hist-narrow, echo = FALSE}
@@ -472,7 +472,7 @@ p <- ggplot(geyser) +
                        y = stat(density)),
                    fill = "grey",
                    color = "black",
-                   bins = 50) #<<
+                   binwidth = 0.1) #<<
 p
 ```
 ]
@@ -799,6 +799,33 @@ ggplot(barley_site_year) +
 ```
 ]
 
+---
+## Minnesota Barley Yields
+
+Adding lines can help comparing the changes. This is sometimes called
+a _dumbbell chart_:
+
+.pull-left[
+```{r barley-avg-dot-2, echo = FALSE, message = FALSE, fig.width = 7}
+barley_site_year <-
+    summarize(group_by(barley, site, year),
+              yield = mean(yield))
+ggplot(barley_site_year) +
+    geom_line(aes(y = site,        #<<
+                  x = yield,       #<<
+                  group = site),   #<<
+              color = "darkgrey",  #<<
+              size = 2) +          #<<
+    geom_point(aes(y = site,
+                   x = yield,
+                   color = year),
+               size = 4)           #<<
+```
+]
+.pull-right[
+```{r barley-avg-dot-2, eval = FALSE}
+```
+]
 
 ---
 ## Minnesota Barley Yields
@@ -946,14 +973,14 @@ psb
 ```
 ]
 .pull-right[
-```{r eye-bar-stacked, echo = FALSE}
+```{r eye-bar-stacked, eval = FALSE}
 ```
 ]
 
 ---
 ## Hair and Eye Color Data
 
-A _pie chart_ can be seen as a stacked bar chart in polar coordinates:
+Changing to polar coordinates produces a _pie chart_:
 
 .pull-left[
 ```{r eye-pie, echo = FALSE}
@@ -975,15 +1002,21 @@ The axis and grid are not helpful; a _theme_ adjustment can remove them:
 (pp <- pp + theme_void())
 ```
 ]
-.pull-right[
+.pull-right-foo[
 ```{r eye-pie-2, eval = FALSE}
 ```
-
+]
+--
+.pull-right-foo[
 Themes provide a way to customize the non-data components of plots:
 i.e. titles, labels, fonts, background, grid lines, and legends.
-
+]
+--
+.pull-right-foo[
 Themes can be used to give plots a consistent customized look.
-
+]
+--
+.pull-right-foo[
 The `ggthemes` package provides a number of themes to emulate the
 style of different publications, for example `theme_wsj` and
 `theme_economist`.
@@ -1007,7 +1040,7 @@ Some questions:
 
 * Which plot makes it easier to tell whether the proportion of
   brown-eyed students is larger or smaller that the proportion of
-  blue-eyed students.
+  blue-eyed students?
 
 * Which plot makes it easier to tell whether these proportions are
   larger or smaller than 1/2 or 1/4 or 1/3?
@@ -1186,7 +1219,7 @@ Recognize when preattentive features might mislead.
 
 --
 
-For features that require attentive processing keep in mind that
+For features that require attentive processing, keep in mind that
 working memory is limited.
 
 
@@ -1360,6 +1393,10 @@ manipulation.
 
 --
 
+The design of `dplyr` is strongly motivated by SQL.
+
+--
+
 The language contains a number of _verbs_ that operate on tables.
 
 --
@@ -1396,10 +1433,10 @@ into one.
 Package `tidyr` provides more verbs, such as `pivot_longer` and
 `pivot_wider` for reshaping data frames.
 
+--
+
 The single table verbs can also be used with `group_by` to work
 separately on groups of rows.
-
-The design of `dplyr` is strongly motivated by SQL.
 
 ---
 class: center, middle
@@ -1640,7 +1677,7 @@ Looking at the file shows some things that need to be cleaned up:
 
 --
 
-* Two header lines at the beginning
+* Two header lines at the beginning.
 
 --
 
